# hypurr-monitor

./: .gitignore  PRD.md  README.md  README_zh.md  TEST_REPORT.md  config.example.toml  heartbeat  logging_config.py  main.py  ml_common.py  pyproject.toml
backtest/: commission.py  engine.py  funding.py  metrics.py  risk.py
candlesticks/: __init__.py  interface.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: __init__.py  manager.py  network.py
data/: __init__.py  binance_client.py  binance_fetcher.py  pair_registry.py  storage.py
hyperliquid/: __init__.py  market_gateway.py  rest_client.py  symbol.py  ws_client.py
indicators/: __init__.py  calculations.py  clustering.py
ml/: __init__.py
models/: models.py  scale_experiment_results.json  train_202502_202601_results_20260412T2015.json  train_202502_202601_results_20260412T2015.md  walkforward_focal_results.json  walkforward_lstm_results.json  walkforward_lstm_results.md  walkforward_lstm_results_20260411T0807.md  walkforward_lstm_results_20260411T0825.md  walkforward_lstm_results_20260411T0838.md  walkforward_lstm_results_20260411T0840.md  walkforward_lstm_results_20260411T0849.json  walkforward_lstm_results_20260411T0849.md  walkforward_lstm_results_20260411T1151.json  walkforward_lstm_results_20260411T1151.md  walkforward_lstm_results_20260411T1211.json  walkforward_lstm_results_20260411T1211.md  walkforward_lstm_results_20260411T1224.json  walkforward_lstm_results_20260411T1224.md  walkforward_lstm_results_20260411T1259.json  (+12 more)
notifications/: __init__.py  (+5 more)
(+112 files in other folders)
